2003-12-28  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Type:splitoff is redundant: switch to checkiing
	for presence of parent link. Now okay to use Type in splitoffs
	(else inherits from parent). Added Type:none to clear.
	* Validation.pm: Allow Type:none. Allow Type and UpdatePOD in
	splitoffs.
	
2003-12-26  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Service.pm: *don't* export "read_properties_lines".
	Instead, introduce new subroutines "read_properties_multival_var"
	and "read_properties_multival_lines", the first of which is exported.
	* Mirror.pm: use "read_properties_multival_var" when setting 
	default values for mirrors.

2003-12-26  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Mirror.pm: setting default values for rsync and sourceforge 
	mirror sets, as well as master mirror set, in case the mirror
	directory is absent or damaged.

2003-12-24  Dave Morrison  <dmrrsn@users.sourceforge.net>

        * Services.pm: export "read_properties_lines"
        * Mirror.pm: set a default value for Master mirror, if config file 
        not present

2003-12-23  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Configure.pm: export "choose_mirrors", and enlarge the dialogue
	with users at the beginning of choosing the mirrors.  (This will 
	be used in the 	postinstall script of the fink-mirrors package.)
	Also check for the existence of mirror/_keys and mirror/_list,
	and bail with a warning to install fink-mirrors if these are not
	found.

	* Bootstrap.pm: don't install the mirror directory (or its files)
	in the fink package (this is being moved to the fink-mirrors
	package)

2003-12-23  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Engine.pm: Fixed fink list --help output since some of it was wrong.
	* Engine.pm: Fixed fink build only checking builddepends: this can't
	happen since -shlibs are needed at build time as well as other things.

2003-12-23  Daniel Macks <dmacks@netspace.org>
